fix img-wrap css

--- a/src/assets/css/blocks/block-info.scss
+++ b/src/assets/css/blocks/block-info.scss
@@ -16,20 +16,7 @@
     .img-wrap {
         margin-right: 3.4rem;
         flex-shrink: 0;
-        width: 100%;
         max-width: 34.2rem;
-        div {
-            position: relative;
-            padding-bottom: 100%;
-            img {
-                position: absolute;
-                top: 0px;
-                left: 0px;
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-            }
-        }
     }
     .content {
         padding-top: 2rem;
